# scorecardlib

./: .gitignore  README.md  pyproject.toml  setup.py
scorecardlib/: README.md  game.py  scoreboard.py  setup.py
src/: game.py  scoreboard.py
tests/: Test_GameClass.py  Test_scoreboard_class.py
