[tool.poetry]
name = "scorecardlib"
version = "0.1.0"
description = ""
authors = ["Vivek Srivastava <435616+vivekfe@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
pytest = "^7.2.1"
setuptools = "^67.2.0"
twine = "^4.0.2"
ez_setup = "^0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
